# recede

./: .gitignore  CHANGELOG.md  INTEGRATIONS.md  NOTICE  README.md  SPEC.md
assets/: readiness-2026-07-14.json
conformance/: vectors-v0.2.json  vectors.json  xcheck.mjs  xcheck.py
examples/agentic-checkout/: OUTPUT.txt  README.md  checkout.ts
examples/evidence-pooling/: OUTPUT.txt  README.md  demo.ts  lanes.ts
examples/evidence-weight/: EVIDENCE.md  demo.ts  lanes.ts
examples/refund/: OUTPUT.txt  README.md  refund.ts
examples/sdlc/: OUTPUT.txt  README.md  demo.ts
integrations/cc10x/: README.md  adapter.test.ts  cc10x-adapter.ts  cli-matrix.test.ts  cli-mode.test.ts  cli.ts  demo.ts  readiness.test.ts  readiness.ts
integrations/okf/: README.md  demo.ts  okf-export.ts
integrations/okf/out-bundle/: index.md
integrations/openwiki/: README.md  cli.ts  demo.ts  openwiki-adapter.ts  sampler.ts
integrations/scanner/: README.md  backfill.ts  cli.ts  scanner.ts  wire.ts
reference/py/: README.md  pyproject.toml
reference/py/examples/: refund_demo.py
reference/py/recede/: __init__.py  canonical.py  checkpoint.py  checks.py  core.py  ledger.py  ops.py  policy.py  recede.py  records.py  weighting.py
reference/py/tests/: test_conformance.py  test_invariants.py  test_runtime.py
reference/ts/: README.md  demo.ts  package.json  tsconfig.json
schemas/: recede.schema.json
site/: index.html
skills/: README.md
skills/recede-blueprint/: SKILL.md
skills/recede-path/: SKILL.md
skills/recede-scan/: SKILL.md
skills/recede-wire/: SKILL.md
(+59 files in other folders)
